2004/01/21 20:56 (-0500) rwmcfa1

	* MakeHelper.pm: yet another attempt at completely clearing up the 
	issues with the -jx make option and not having the doc rebuild at every
	single make invocation. uses blib_done file, which depends on all of
	the @xs_files. hopefully this will do it, i'm about out of ideas. 
	bascially MakeMaker sucks if you're tyring to do stuff this complicated
	with it. with plain old make this wouldn't be an issue at all, but 
	with the hooks we're given this is not going to be easy.

2004/01/21 15:14 (-0500) muppetman

	* ParseXSDoc.pm: allow space padding on either side of the arguments
	in the xsub declaration.  also make the error messages more 
	digestable (by removing the __WARN__ handler, was for debug only).

2004/01/21 14:57 (-0500) rwmcfa1

	* MakeHelper.pm: we need to create the directory in which index.pod will
	be placed under certian circumstances. this doesn't affect any of 
	Gtk2-Perl, but some modules (with certian structures) will cause 
	problems that creating the directory if need be will address.

2004/01/16 18:38 (-0500) rwmcfa1

	* typemap: added types for gshort and gushort, patch by kaffee

2004/01/16 11:09 (-0500) rwmcfa1

	* MakeHelper.pm: BLIB_MOD_EXIST -> BLIB_DONE. and set equal to something
	that 'seems' to ensure that blib has completed. fixes -j make build 
	problems.

2004/01/16 00:23 (-0500) muppetman

	* README: unstable release 1.030

	* README, Makefile.PL: add emphasis of the unstable nature of this series.

2004/01/16 00:02 (-0500) muppetman

	A GUtils.xs
	* MANIFEST, Makefile.PL, Glib.xs: add GUtils.xs, with version information
	functions.

	* ParseXSDoc.pm: don't complain about empty argument lists -- they are
	legal on pure functions.

	* AUTHORS: updated.

2004/01/15 22:08 (-0500) muppetman

	* Glib.xs, Glib.pm: restore the prototypes on filename_to_unicode and
	filename_from_unicode, to allow proper support for the function and static